--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:coverage": "jest --collect-coverage",
     "lint": "eslint ./**/*.js",
     "lint:fix": "eslint ./**/*.js --fix",
-    "docs:generate": "jsdoc -c jsdoc.json"
+    "docs:generate": "jsdoc -c jsdoc.json",
+    "prepare": "husky install"
   },
   "jest": {
     "transform": {
@@ -66,6 +67,7 @@
     "jsdoc": "^3.6.7",
     "react-native": "^0.59.3",
     "shelljs": "^0.8.4",
-    "unzipper": "^0.10.11"
+    "unzipper": "^0.10.11",
+    "husky": "^7.0.0"
   }
 }
