--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "docs:generate": "jsdoc -c jsdoc.json",
     "prepare": "husky install",
     "commit": "cz"
-
   },
   "jest": {
     "transform": {
@@ -59,6 +58,7 @@
     "aws-sdk": "^2.1048.0",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^24.8.0",
+    "cz-conventional-changelog": "^3.3.0",
     "docdash": "^1.2.0",
     "edit-json-file": "^1.7.0",
     "eslint": "^4.19.1",
@@ -66,11 +66,24 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
+    "husky": "^7.0.0",
     "jest": "^24.8.0",
     "jsdoc": "^3.6.7",
     "react-native": "^0.59.3",
     "shelljs": "^0.8.4",
-    "unzipper": "^0.10.11",
-    "husky": "^7.0.0"
+    "unzipper": "^0.10.11"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "sdkVersions": {
+    "ios": {
+      "newrelic": "7.3.4"
+    },
+    "android": {
+      "newrelic": "6.3.1"
+    }
   }
 }
