fix: interaction static methods are not working
return interaction Id from react method to fix this issue.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -85,4 +85,4 @@ dependencies {
 
 ReactNative.shared.applyPackageVersion()
 ReactNative.shared.applyDefaultExcludes()
-ReactNative.module.applyReactNativeDependency("api")
+//ReactNative.module.applyReactNativeDependency("api")
