--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,14 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        }
+      }
+    ]
+  ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
   ]
