--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newrelic-react-native-agent",
-  "version": "0.0.1-beta.6",
+  "version": "0.0.1",
   "description": "A New Relic Mobile Agent for React Native",
   "main": "index.js",
   "scripts": {
@@ -84,10 +84,10 @@
   },
   "sdkVersions": {
     "ios": {
-      "newrelic": "7.3.5"
+      "newrelic": "7.3.6"
     },
     "android": {
-      "newrelic": "6.5.0"
+      "newrelic": "6.6.0"
     }
   }
 }
