--- a/newrelic.gradle
+++ b/newrelic.gradle
@@ -1,4 +1,9 @@
 /**
+ * Copyright (c) 2022-present New Relic Corporation. All rights reserved.
+ * SPDX-License-Identifier: Apache-2.0 
+ */
+
+/**
  *
  * New Relic React Native Gradle Plugin
  *
