--- a/NewRelicExampleApp/package.json
+++ b/NewRelicExampleApp/package.json
@@ -25,7 +25,8 @@
     "eslint": "^8.6.0",
     "jest": "^27.4.5",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "newrelic-react-native-agent": "^0.0.8"
   },
   "jest": {
     "preset": "react-native"
