feat: New example app

--- a/NewRelicExampleApp/app.json
+++ b/NewRelicExampleApp/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "AgentTestApp",
-  "displayName": "AgentTestApp"
+  "name": "NewRelicExampleApp",
+  "displayName": "NewRelicExampleApp"
 }
