--- a/.github/workflows/release-testing.yaml
+++ b/.github/workflows/release-testing.yaml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Publish as NPM package on new relic account(we need npm secret from new relic account)
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NODE_AGENT_NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.MOBILE_AGENT_NPM_TOKEN}}
         run: npm publish
 
       - name: Capture logs if previous failure
