--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-env": "^7.16.7",
     "@types/jest": "^24.9.1",
     "@types/node": "^17.0.8",
+    "ansi-regex": ">=5.0.1",
     "aws-sdk": "^2.1048.0",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^24.8.0",
@@ -62,21 +63,20 @@
     "cz-conventional-changelog": "^3.3.0",
     "docdash": "^1.2.0",
     "edit-json-file": "^1.7.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.0",
-    "jest": "^24.8.0",
+    "jest": "^29.3.1",
     "jsdoc": "^3.6.7",
-    "react-native": "^0.64.1",
-    "shelljs": "^0.8.4",
-    "unzipper": "^0.10.11",
-    "ansi-regex": ">=5.0.1",
-    "marked": ">=4.0.10",
     "markdown-it": ">=12.3.2",
-    "node-notifier": ">=8.0.1"
+    "marked": ">=4.0.10",
+    "node-notifier": ">=8.0.1",
+    "react-native": "^0.70.6",
+    "shelljs": "^0.8.4",
+    "unzipper": "^0.10.11"
   },
   "config": {
     "commitizen": {
@@ -88,7 +88,7 @@
       "newrelic": "7.4.0"
     },
     "android": {
-      "newrelic": "6.9.0"
+      "newrelic": "6.9.1"
     }
   }
 }
