--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^6.0.1",
+    "error-stack-parser": "^2.1.4",
     "lodash.foreach": "^4.5.0",
     "react-native-promise-rejection-utils": "0.0.1"
   },
