feat: updated Android Agent for AGP 8.0 support, Added Support for Expo 49

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,6 +47,7 @@ if (findProject(':@newrelic-react-native-agent')) {
 
 
 android {
+    namespace "com.NewRelic"
     compileSdkVersion 31
 
     defaultConfig {
