--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.NewRelic">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 </manifest>
   
