--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,8 @@ plugins {
 
 def packageJson = PackageJson.getForProject(project)
 def newrelicVersion = packageJson['sdkVersions']['android']['newrelic']
+def ndkVersion = packageJson['sdkVersions']['android']['ndk']
+
 
 
 project.ext {
@@ -30,7 +32,8 @@ project.ext {
     versions: [
 
       newrelic          : [
-        android: newrelicVersion
+        android: newrelicVersion,
+        ndk:ndkVersion
       ],
     ],
   ])
@@ -76,6 +79,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     compileOnly 'com.facebook.react:react-native:+'
     implementation "com.newrelic.agent.android:android-agent:${ReactNative.ext.getVersion("newrelic", "android")}"
+    implementation "com.newrelic.agent.android:agent-ndk:${ReactNative.ext.getVersion("newrelic", "ndk")}"
     implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.1"
 }
