--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newrelic-react-native-agent",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A New Relic Mobile Agent for React Native",
   "main": "./index.js",
   "types": "./dist/index.d.ts",
@@ -94,7 +94,8 @@
       "newrelic": "7.4.6"
     },
     "android": {
-      "newrelic": "7.0.0"
+      "newrelic": "7.0.0",
+      "ndk":"1.0.3"
     }
   }
 }
