--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^7.2.2",
+    "@react-native-community/cli-platform-android": "^11.3.7",
     "lodash.foreach": "^4.5.0",
     "react-native-promise-rejection-utils": "0.0.1"
   },
@@ -95,7 +96,7 @@
     },
     "android": {
       "newrelic": "7.0.0",
-      "ndk":"1.0.3"
+      "ndk": "1.0.3"
     }
   }
 }
