feat: log forwarding functionality
Add static Methods for log messages and feature flag for log reporting enabled

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -87,6 +87,8 @@ android {
 repositories {
     mavenCentral()
     google()
+    maven { url "https://oss.sonatype.org/content/repositories/comnewrelic-2914"}
+
 }
 
 dependencies {
