--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newrelic-react-native-agent",
-  "version": "1.3.9",
+  "version": "1.4.0",
   "description": "A New Relic Mobile Agent for React Native",
   "main": "./index.js",
   "types": "./dist/index.d.ts",
@@ -92,11 +92,11 @@
   },
   "sdkVersions": {
     "ios": {
-      "newrelic": "7.4.12"
+      "newrelic": "7.5.0"
     },
     "android": {
-      "newrelic": "7.3.1",
-      "ndk": "1.0.4"
+      "newrelic": "7.5.+",
+      "ndk": "1.1.+"
     }
   }
 }
