fix: fix the dependancies issue in 1.4.0
#180

--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   },
   "sdkVersions": {
     "ios": {
-      "newrelic": "7.5.0"
+      "newrelic": "~>7.5.0"
     },
     "android": {
       "newrelic": "7.5.+",
