fix: android app crashes when backgrounded
Fixed an issue causing the application to crash when transitioning to the background due to a
mismatch between the Android and NDK agents.

#183 #196

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newrelic-react-native-agent",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "A New Relic Mobile Agent for React Native",
   "main": "./index.js",
   "types": "./dist/index.d.ts",
@@ -95,8 +95,8 @@
       "newrelic": "~>7.5.1"
     },
     "android": {
-      "newrelic": "7.5.+",
-      "ndk": "1.1.+"
+      "newrelic": "7.5.1",
+      "ndk": "1.1.1"
     }
   }
 }
