--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   "author": "New Relic",
   "license": "Apache-2.0",
   "homepage": "https://github.com/newrelic/newrelic-react-native-agent",
+    "repository": {
+    "type": "git",
+    "url": "https://github.com/newrelic/newrelic-react-native-agent.git"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
